fixed create table function

--- a/index.html
+++ b/index.html
@@ -8,20 +8,7 @@
 		<title>Bootcamp Capsouls</title>
 	</head>
 	<body>
-		<table id="table-container">
-			<tr class="header">
-				<th class="id header">ID</th>
-				<th class="first-name header">First Name</th>
-				<th class="last-name header">Last Name</th>
-				<th class="capsule header">Capsule</th>
-				<th class="age header">Age</th>
-				<th class="city header">City</th>
-				<th class="gender header">Gender</th>
-				<th class="hobby header">Hobby</th>
-				<th class="edit header"></th>
-				<th class="delete header"></th>
-			</tr>
-		</table>
+		<table id="table-container"></table>
 		<script src="./index.js"></script>
 	</body>
 </html>
