--- a/index.html
+++ b/index.html
@@ -5,28 +5,83 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Bootcamp Capsuls</title>
 	</head>
 	<body>
-		<div id="header">
-			<div class="search">
-				<span>search: </span>
-				<input class="input" type="text" />
-				<select name="category-container" class="category">
-					<option class="category id" value="id">ID</option>
-					<option class="category firstName" value="firstName">
-						First Name
-					</option>
-					<option class="category lastName" value="lastName">Last Name</option>
-					<option class="category capsule" value="capsule">Capsule</option>
-					<option class="category age" value="age">Age</option>
-					<option class="category city" value="city">City</option>
-					<option class="category gender" value="gender">Gender</option>
-					<option class="category hobby" value="hobby">Hobby</option>
-				</select>
-			</div>
+		<div id="spinner">
+			<svg class="gegga">
+				<defs>
+					<filter id="gegga">
+						<feGaussianBlur in="SourceGraphic" stdDeviation="7" result="blur" />
+						<feColorMatrix
+							in="blur"
+							mode="matrix"
+							values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 20 -10"
+							result="inreGegga"
+						/>
+						<feComposite in="SourceGraphic" in2="inreGegga" operator="atop" />
+					</filter>
+				</defs>
+			</svg>
+			<svg class="snurra" width="200" height="200" viewBox="0 0 200 200">
+				<defs>
+					<linearGradient id="linjärGradient">
+						<stop class="stopp1" offset="0" />
+						<stop class="stopp2" offset="1" />
+					</linearGradient>
+					<linearGradient
+						y2="160"
+						x2="160"
+						y1="40"
+						x1="40"
+						gradientUnits="userSpaceOnUse"
+						id="gradient"
+						xlink:href="#linjärGradient"
+					/>
+				</defs>
+				<path
+					class="halvan"
+					d="m 164,100 c 0,-35.346224 -28.65378,-64 -64,-64 -35.346224,0 -64,28.653776 -64,64 0,35.34622 28.653776,64 64,64 35.34622,0 64,-26.21502 64,-64 0,-37.784981 -26.92058,-64 -64,-64 -37.079421,0 -65.267479,26.922736 -64,64 1.267479,37.07726 26.703171,65.05317 64,64 37.29683,-1.05317 64,-64 64,-64"
+				/>
+				<circle class="strecken" cx="100" cy="100" r="64" />
+			</svg>
+			<svg class="skugga" width="200" height="200" viewBox="0 0 200 200">
+				<path
+					class="halvan"
+					d="m 164,100 c 0,-35.346224 -28.65378,-64 -64,-64 -35.346224,0 -64,28.653776 -64,64 0,35.34622 28.653776,64 64,64 35.34622,0 64,-26.21502 64,-64 0,-37.784981 -26.92058,-64 -64,-64 -37.079421,0 -65.267479,26.922736 -64,64 1.267479,37.07726 26.703171,65.05317 64,64 37.29683,-1.05317 64,-64 64,-64"
+				/>
+				<circle class="strecken" cx="100" cy="100" r="64" />
+			</svg>
 		</div>
-		<table id="table-container"></table>
+		<main id="main">
+			<div id="header">
+				<h1>Welcome To Pini Capsule</h1>
+				<div class="search">
+					<span>search: </span>
+					<input class="input" type="text" />
+					<select name="category-container" class="category">
+						<option class="category id" value="id">ID</option>
+						<option class="category firstName" value="firstName">
+							First Name
+						</option>
+						<option class="category lastName" value="lastName">
+							Last Name
+						</option>
+						<option class="category capsule" value="capsule">Capsule</option>
+						<option class="category age" value="age">Age</option>
+						<option class="category city" value="city">City</option>
+						<option class="category gender" value="gender">Gender</option>
+						<option class="category hobby" value="hobby">Hobby</option>
+					</select>
+				</div>
+			</div>
+			<table id="table-container"></table>
+		</main>
 		<script src="./index.js"></script>
 	</body>
 </html>
