--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+			integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+			crossorigin="anonymous"
+		/>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="./css/style.css" />
 		<title>Bootcamp Capsuls</title>
 	</head>
 	<body>
@@ -59,8 +65,15 @@
 			</svg>
 		</div>
 		<main id="main">
+			<div class="main-header">
+				<div class="empty"></div>
+				<h1>Welcome To Pini Capsule &#128075;</h1>
+				<label id="switch" class="switch">
+					<input type="checkbox" id="slider" />
+					<span class="slider round"></span>
+				</label>
+			</div>
 			<div id="header">
-				<h1>Welcome To Pini Capsule</h1>
 				<div class="search">
 					<span>search: </span>
 					<input class="input" type="text" />
